Updated classes to ensure that plushies were added to and updating in the database.